<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_controllers</name>
  <version>1.0.0</version>
  <description>Collection of controllers for the LBR robots</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lbr_velocity_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
