<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvim_position_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="m.huber_1994@hotmail.de">martin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>  <!-- see https://github.com/ros2/eigen3_cmake_module -->

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>qpoases_vendor</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>eigen</depend>
  <!-- <depend>osqp_vendor</depend> -->
  <depend>osqp_eigen_vendor</depend>
  <depend>realtime_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
